--- a/src/App.css
+++ b/src/App.css
@@ -23,38 +23,54 @@ html, body, #root {
   height: 100%;
   display: flex;
   flex-direction: column;
-  
   overflow: scroll;
-  background-color: #004643;
-  color: #fffffe;
-}
+  background-color: #f9f9f9; 
+  /* #A6FFF8; */
+  color: #111;
+} 
 
 .player-right-pane-area {
   width: 30%;
   height: 100%;
-  background-color: #002e2c;
-  color: #fffffe;
+  background-color: #A6FFF8; 
+  color: #111;
   overflow: scroll;
   padding: 20px 2%; 
 }
 
+
 .right-rail-container {
-  background-color: #083937;
+  background-color: #fefefe;
+  color: #111;
   border-radius: 10px;
   padding: 20px; 
-  
   margin: 20px 0;
-  
+  min-height: 200px;
+  overflow: scroll;
 }
 
-.callsParentContainer {
-  background-color: #000;
+.top-area {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  align-items: flex-start; 
+  min-height: 100px;
+}
+
+.Container {
+  background-color: #fff;
+  color: #111;
+  display: flex;
+  flex-direction: row;
+  width: 400px;
+  /* min-width: 35%; */
   justify-content: space-between;
-  align-items: center;
-  padding: 20px 40px;
+  align-items: flex-start;
+  padding: 20px;
+  border-radius: 20px;
+  margin: 20px 0 0 40px;
+  -webkit-box-shadow: 0px 17px 51px -17px rgba(0,0,0,0.14);
+  -moz-box-shadow: 0px 17px 51px -17px rgba(0,0,0,0.14);
+  box-shadow: 0px 17px 51px -17px rgba(0,0,0,0.14);
 }
 
 .callsContainer {
@@ -65,26 +81,35 @@ html, body, #root {
   
 }
 
+a {
+  text-decoration: underline;
+  cursor: pointer;
+}
 
-.rr-h2s {        
+
+
+.cont-h2 {        
   padding: 0;
-  margin-top: 0;
+  margin: 0;
   text-transform: uppercase;
   font-weight: 800;
   font-size: 0.9em;
-  color: #eee;
+  color: #000;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  overflow: scroll;
+  max-height: 300px;
 }
 
 .pill {
-  padding: 2px 10px;
+  padding: 3px 10px;
   display: inline-block;
   background-color: #002e2c;
   font-size: 0.9em;
   text-align: center;
-  border-radius: 10px;
+  border-radius: 5px;
   color: #eee;
 }
 
@@ -92,12 +117,13 @@ html, body, #root {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
 }
 
 .btn-group div {
-  width: 45%;
+  width: 47%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
