--- a/src/App.css
+++ b/src/App.css
@@ -118,14 +118,20 @@ a {
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  margin: 20px 0; 
 }
 
 .btn-group div {
   width: 47%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.btn-group div svg{
+  font-size: 1.4em;
+  margin-bottom: 10px;
 }
 
 .called-num {
