--- a/src/App.css
+++ b/src/App.css
@@ -146,3 +146,10 @@ a {
   
 }
 
+.player-right-pane-area .title {
+  display: flex;
+  justify-content: flex-start;
+  padding-top: 20px;
+  margin-bottom: 0;
+  border-top: 1px solid #aaa;
+}
