--- a/src/App.css
+++ b/src/App.css
@@ -148,8 +148,8 @@ a {
 
 .player-right-pane-area .title {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   padding-top: 20px;
   margin-bottom: 0;
-  border-top: 1px solid #aaa;
+  
 }
